# golden-raccoon

./: .gitignore  CONTRIBUTING.md  PROJECT_TODO.md  package-lock.json  package.json
backend/: README.md
backend/contracts/: hardhat.config.ts  package.json
backend/contracts/contracts/: GoldRaccoonVault.sol
backend/contracts/scripts/: deploy.ts
backend/prisma/: schema.prisma
backend/src/: types.ts
backend/src/agent/: analyze.ts  decide.ts  observe.ts  plan.ts
backend/src/portfolio/: riskScoring.ts
backend/src/transactions/: mockTransactions.ts
docs/: CHAIN_CAPABILITY_MATRIX.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/scripts/: agent-fixture-check.ts  stellar-config-check.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentAnalysisClient.tsx  AgentNetworkSummaryCard.tsx  AgentResultPanel.tsx  AgentTimeline.tsx  AgentVerdictCard.tsx  AgentsNetwork.tsx  AlertCard.tsx  AppShell.tsx  CurrentRecommendationCard.tsx  DashboardClient.tsx  NoDataState.tsx  PortfolioCard.tsx  RecentTransactions.tsx  RiskBreakdownCard.tsx  RiskScoreCard.tsx  RuleForm.tsx  SignalSummaryCard.tsx  (+9 more)
scripts/: check-deploy-readiness.mjs  check-stellar-rpc.mjs  smoke-api.mjs
soroban/: Cargo.toml  README.md
soroban/contracts/risk-registry/: Cargo.toml
soroban/contracts/risk-registry/src/: lib.rs  test.rs
soroban/contracts/risk-registry/test_snapshots/test/: admin_can_revoke_publisher.1.json  authorized_publisher_can_publish_and_update.1.json  rejects_unauthorized_invalid_and_stale_reports.1.json
(+76 files in other folders)
